cabal-version:       >= 2.0

name:                polytile
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable polytile
  main-is:           polytile.hs
  default-language:  Haskell2010
  build-depends:     base       ^>= 4.14,
                     containers ^>= 0.6
